# TriWild

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
bindings/python/: CMakeLists.txt  example.py  pytriwild.pyi
bindings/python/src/: pytriwild.cpp
cmake/: FindLIBIGL.cmake  TriWildDownloadExternal.cmake
src/triwild/: do_triwild.h
